[package]
name = "TodoRust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.10.0"
serde = {version = "1.0.132", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
sqlx = { version = "0.8.6", features = [ "mysql", "runtime-tokio", "macros" ] }
tokio = { version = "1", features = [ "full" ] }
dotenv = "0.15.0"
actix-cors = "0.7"